<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_new"
    tools:context=".pesanan.ui.DetailPesananActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_nota"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_receipt_24"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bg_header"/>

                <TextView
                    android:id="@+id/tv_id_pesanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesanan"
                    android:textSize="20sp"
                    android:textColor="@color/teal_500"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/img_nota"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bg_header"/>

                <TextView
                    android:id="@+id/tv_terbayar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selesai"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bg_header"/>

                <TextView
                    android:id="@+id/tv_belum_bayar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_bayar"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bg_header"/>

                <View
                    android:id="@+id/bg_header"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_nota"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_data_pelanggan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_pelanggan"
                    android:textColor="@color/teal_500"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bg_header" />

                <View
                    android:id="@+id/bg_pelanggan"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_data_pelanggan"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_nama_depan_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_user"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bg_pelanggan" />

                <TextView
                    android:id="@+id/tv_nama_belakang_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_user"
                    android:textColor="@color/black"
                    android:layout_marginStart="3dp"
                    app:layout_constraintStart_toEndOf="@id/tv_nama_depan_user"
                    app:layout_constraintTop_toBottomOf="@id/bg_pelanggan" />

                <TextView
                    android:id="@+id/tv_nomor_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_telepon"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nama_depan_user" />

                <TextView
                    android:id="@+id/tv_email_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nomor_user" />

                <TextView
                    android:id="@+id/tv_alamat_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_lengkap"
                    android:textColor="@color/black"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_user"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/img_ktp_user"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_image"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_alamat_user"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/img_bukti_user"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_image"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_ktp_user"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_data_pesanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_paket"
                    android:textColor="@color/teal_500"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_bukti_user" />

                <View
                    android:id="@+id/bg_paket"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_data_pesanan"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_nama_paket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_paket"
                    android:textColor="@color/black"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bg_paket" />

                <TextView
                    android:id="@+id/tv_alamat_paket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_lengkap"
                    android:textColor="@color/black"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nama_paket"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_durasi_paket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/durasi"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_alamat_paket" />

                <TextView
                    android:id="@+id/tv_rp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_durasi_paket" />

                <TextView
                    android:id="@+id/tv_harga_paket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1000000"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/tv_rp"
                    app:layout_constraintTop_toBottomOf="@id/tv_durasi_paket" />

                <TextView
                    android:id="@+id/tv_koma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/koma"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/tv_harga_paket"
                    app:layout_constraintTop_toBottomOf="@id/tv_durasi_paket" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>